# vending-machine

./: README.md  docker-compose.yaml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  pending_coin.py  transaction.py  vending_machine.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  pending_coin.py  product.py  vending_machine.py
backend/app/database/: base.py
backend/app/models/: __init__.py  pending_coin.py  product.py  vending_machine.py
backend/app/schemas/: __init__.py  pending_coin.py  product.py  transaction.py  vending_machine.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_machine.py  test_products.py
frontend/: package.json
frontend/components/: Meta.js  Product.js
frontend/pages/: index.js
frontend/styles/: Home.module.css
