[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nattapong.ja <nattapong.jaisabai@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
